--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
-.App {
-  text-align: center;
+a.nav-link.active {
+    border-bottom: 3px solid #2f80ed;
+    border-radius: 3px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+div.nav-item {
+    text-align: center;
+}
+a.nav-link {
+    text-align: center;
+    color: black;
+    display: inline-block;
+    padding: 0.5rem 2rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.tab-content {
+    margin-top: 15px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#task-list {
+    list-style: none;
+    padding-left: 0;
+    margin-top: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+#task-list li input[type="checkbox"] {
+    height: 20px;
+    margin-right: 15px;
+}
+label.done {
+    text-decoration: line-through;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.deleteTaskButton:hover {
+    cursor: pointer;
 }
