--- a/src/App.css
+++ b/src/App.css
@@ -34,3 +34,13 @@ label.done {
 .deleteTaskButton:hover {
     cursor: pointer;
 }
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    background-color: #f5f5f5;
+    text-align: center;
+}
